[tool.poetry]
name = "weatherchecker"
version = "0.1.0"
description = ""
authors = ["David Banks <amoebae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "20.1.0"
pyramid = "2.0"
pyramid-jinja2 = "2.8"
pyowm = "3.2.0"

[tool.poetry.scripts]
weatherchecker-cli = "weatherchecker.cli:main"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."paste.app_factory"]
main = "weatherchecker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
